--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel": "^5.8.21",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
+    "imgur": "^0.1.6",
     "jade": "^1.11.0",
     "mongodb": "^2.0.41",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "multer": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
