--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mongodb": "^2.0.41",
     "morgan": "^1.6.1",
     "multer": "^1.0.3",
-    "node-sass-middleware": "^0.9.0"
+    "node-sass-middleware": "^0.9.0",
     "node-sass-middleware": "^0.9.0",
     "passport": "^0.3.0",
     "passport-twitter": "^1.0.3"
